--- a/HelloWorld/app/src/main/res/values-en/strings.xml
+++ b/HelloWorld/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Exercise 01</string>
     <string name="main_title">Register</string>
