--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FormulaWorld</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
 </resources>
