--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,15 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
+
+    <string name="facebook_app_id">1078741456234485</string>
+    <string name="fb_login_protocol_scheme">fb1078741456234485</string>
+    <string name="first_name">Primeiro nome</string>
+    <string name="last_name">Último nome</string>
+    <string name="update">Atualizar</string>
+    <string name="vat">NIF</string>
+    <string name="phone">Telemóvel</string>
+
 </resources>
