Update colors and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="vat">NIF</string>
     <string name="phone">Telemóvel</string>
     <string name="bets_fragment">Bets fragment</string>
+    <string name="pilots">Pilotos</string>
+    <string name="teams">Equipas</string>
 
 </resources>
