--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -12,4 +12,6 @@
     <string name="update">Atualizar</string>
     <string name="last_name">Último nome</string>
     <string name="first_name">Primeiro nome</string>
+    <string name="more_button">Mais</string>
+    <string name="cars">Carros</string>
 </resources>
