06-27 :: Fix news strings

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -12,4 +12,5 @@
     <string name="update">Atualizar</string>
     <string name="last_name">Último nome</string>
     <string name="first_name">Primeiro nome</string>
+    <string name="news_button">mais...</string>
 </resources>
