--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,5 @@
     <string name="update">Update</string>
     <string name="last_name">Last name</string>
     <string name="first_name">Last name</string>
+    <string name="news_button">more...</string>
 </resources>
