Update string locales

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -15,4 +15,13 @@
     <string name="news_button">mais...</string>
     <string name="more_button">Mais</string>
     <string name="cars">Carros</string>
+    <string name="title_user">User</string>
+    <string name="title_home">Início</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notificações</string>
+    <string name="title_categories">Categorias</string>
+    <string name="title_bets">Apostas</string>
+    <string name="title_more">Mais</string>
+    <string name="sign_in">Login</string>
+    <string name="sign_out">Sign out</string>
 </resources>
