--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -15,4 +15,13 @@
     <string name="news_button">more...</string>
     <string name="more_button">More</string>
     <string name="cars">Cars</string>
+    <string name="title_user">User</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_categories">Categories</string>
+    <string name="title_bets">Bets</string>
+    <string name="title_more">More</string>
+    <string name="sign_in">Login</string>
+    <string name="sign_out">Sign out</string>
 </resources>
