Update app navigation

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -15,7 +15,7 @@
     <string name="news_button">mais...</string>
     <string name="more_button">Mais</string>
     <string name="cars">Carros</string>
-    <string name="title_user">User</string>
+    <string name="title_user">Utilizador</string>
     <string name="title_home">Início</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notificações</string>
@@ -24,4 +24,5 @@
     <string name="title_more">Mais</string>
     <string name="sign_in">Login</string>
     <string name="sign_out">Sign out</string>
+    <string name="calendar">Calendário</string>
 </resources>
