--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_more">More</string>
     <string name="sign_in">Login</string>
     <string name="sign_out">Sign out</string>
+    <string name="calendar">Calendar</string>
 </resources>
