--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,7 +11,7 @@
     <string name="vat">VAT</string>
     <string name="update">Update</string>
     <string name="last_name">Last name</string>
-    <string name="first_name">Last name</string>
+    <string name="first_name">First name</string>
     <string name="news_button">more...</string>
     <string name="more_button">More</string>
     <string name="cars">Cars</string>
